<resources>
    <string name="app_name">CocktailBar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktail_list_logo">Cocktail list logo</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="add_your_first_cocktail_here">Add your first cocktail here</string>
    <string name="add_cocktail">Aff cocktail</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="recipe">Recipe</string>
    <string name="optional_field">Optional field</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="cocktail_added">Cocktail added</string>
    <string name="cocktail_updated">Cocktail updated</string>
    <string name="cocktail_needs_a_title">Cocktail needs a title</string>
    <string name="ingredients_name">Ingredient\'s name</string>
    <string name="ingredient">Ingredient</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
</resources>