<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.MyCocktailsEmpty">


    <ImageView
        android:id="@+id/ivEmptyCocktailListLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="300dp"
        android:src="@drawable/empty_cocktail_list_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cocktail_list_logo"/>

    <TextView
        android:id="@+id/tvMyCocktailsEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/my_cocktails"
        android:textColor="@color/dark_grey"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEmptyCocktailListLogo" />

    <LinearLayout
        android:id="@+id/layoutAddHere"
        android:layout_width="130dp"
        android:layout_height="185dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMyCocktailsEmpty"

        >

        <TextView
            android:id="@+id/tvAddCocktailHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_your_first_cocktail_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddCocktailEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/add_cocktail"
            android:src="@drawable/ic_add"
            tools:ignore="ImageContrastCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
