<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="329dp"
        android:layout_height="328dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMyCocktails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_ingredient"
                android:textColor="@color/dark_grey"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCocktailTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="40dp"
                app:boxCornerRadiusBottomStart="40dp"
                app:boxCornerRadiusTopEnd="40dp"
                app:boxCornerRadiusTopStart="40dp"
                app:endIconMode="clear_text"
                app:helperText="Add title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etlCocktailTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingredient" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/save" />

            <Button
                android:id="@+id/bCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/cancel" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>